<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/msbg"
    tools:context=".MusicplayActivity">
    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cp"
        android:contentDescription="@string/todo" />

    <SeekBar
        android:id="@+id/sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="#ffffff"/>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:text="@string/tot"
            android:textSize="16sp"
            android:textColor="#ffffff"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="180dp">
        <Button
            android:id="@+id/btn_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_bg"
            android:text="@string/btns"
            android:layout_margin="5dp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_bg"
            android:text="@string/pusp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="5dp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_bg"
            android:text="@string/conp"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:background="@drawable/btn_bg"
            android:text="@string/exit"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>