<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="blocksDescendants">
    <!--用上面代码抢回焦点-->
    <ImageView
        android:id="@+id/iv_equipIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_light"
        android:contentDescription="@string/t" />
    <TextView
        android:id="@+id/tv_equipName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:text="@string/light"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/iv_equipIcon"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="15dp"/>
    <Switch
        android:id="@+id/sw_switch"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:showText="true"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:thumb="@drawable/switch_custom_thumb_selector"
        android:track="@drawable/switch_custom_track_selector"
        android:switchTextAppearance="@style/SwitchTheme"/>


</RelativeLayout>
