<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="45dp">
    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:text="@string/userq"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:text="@string/znjj"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:fontFamily="sans-serif-black"
        tools:ignore="RelativeOverlap" />
    <ImageView
        android:id="@+id/iv_quit"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_quit"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"/>

</RelativeLayout>
