<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/ll_equip"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessParent">
        <ImageView
            android:id="@+id/iv_equipIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sb_p"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_equipName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_scenario"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessParent">
        <ImageView
            android:id="@+id/iv_scenarioIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/qj_n"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_scenarioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qj"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_vc"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessParent">
        <ImageView
            android:id="@+id/iv_vcIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sk_n"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_vcName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sk"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="12sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_music"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables,UselessParent">
        <ImageView
            android:id="@+id/iv_musicIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/music_n"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/tv_musicName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mus"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>
