<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScenarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_movie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo11"
                android:src="@drawable/ic_movice"/>
            <TextView
                android:id="@+id/tv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_eat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:id="@+id/iv_eat"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo11"
                android:src="@drawable/ic_eat"/>
            <TextView
                android:id="@+id/tv_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eat"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_sleep"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:id="@+id/iv_sleep"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo11"
                android:src="@drawable/ic_sleep"/>
            <TextView
                android:id="@+id/tv_sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_outdoor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:id="@+id/iv_outdoor"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/todo11"
                android:src="@drawable/ic_outdoor"/>
            <TextView
                android:id="@+id/tv_outdoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outdoor"
                android:textSize="24sp"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>